# hand-gesture-recognition

./: README.md  pyproject.toml
model/keypoint_classifier/: keypoint.csv  keypoint_classifier.onnx  keypoint_classifier.pt  keypoint_classifier.pth  keypoint_classifier_label.csv
src/: collect_data.py  config.py  main.py  train_model.py
src/model/: gesture_net.py
src/utils/: cvfpscalc.py  hand_tracker.py  logger.py  webcam.py
