[project]
name = "gestures"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "mediapipe<=0.10.13",
    "opencv-python>=4.13.0.90",
    "torch>=2.0.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "onnx>=1.14.0",
    "onnxscript>=0.1.0",
    "onnxruntime-gpu>=1.23.2",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }
